# kdesdk

./: .krazy  CMakeLists.txt  CTestConfig.cmake  Mainpage.dox  README
doc/: CMakeLists.txt
doc/kapptemplate/: index.docbook
doc/kmtrace/: CMakeLists.txt
doc/poxml/: CMakeLists.txt
kapptemplate/: CMakeLists.txt  HOWTO_MakeNewtemplate.txt  Mainpage.dox  Messages.sh  apptemplateitem.cpp  apptemplateitem.h  apptemplatesmodel.cpp  apptemplatesmodel.h  choice.ui  choicepage.cpp  choicepage.h  generate.ui  generatepage.cpp  generatepage.h  introduction.ui  kapptemplate.cpp  kapptemplate.desktop  kapptemplate.h  kapptemplate.kcfg  main.cpp  prefs.kcfgc  properties.ui
kapptemplate/icons/: CMakeLists.txt
kapptemplate/templates/: CMakeLists.txt
kapptemplate/templates/C++/: CMakeLists.txt
kapptemplate/templates/C++/akonadiresource/: %{APPNAMELC}resource.cpp  %{APPNAMELC}resource.desktop  %{APPNAMELC}resource.h  CMakeLists.txt  Messages.sh  akonadiresource.kdevtemplate  settings.kcfgc
kapptemplate/templates/C++/akonadiserializer/: CMakeLists.txt  README  akonadi_serializer_%{APPNAMELC}.cpp  akonadi_serializer_%{APPNAMELC}.desktop  akonadi_serializer_%{APPNAMELC}.h  akonadiserializer.kdevtemplate
kapptemplate/templates/C++/flake/: %{APPNAMELC}shape.desktop  %{APPNAME}Plugin.cpp  %{APPNAME}Plugin.h  %{APPNAME}Shape.cpp  %{APPNAME}Shape.h  %{APPNAME}ShapeFactory.cpp  %{APPNAME}ShapeFactory.h  %{APPNAME}Tool.cpp  %{APPNAME}Tool.h  %{APPNAME}ToolFactory.cpp  %{APPNAME}ToolFactory.h  %{APPNAME}Widget.cpp  %{APPNAME}Widget.h  CMakeLists.txt  README  flake.kdevtemplate
kapptemplate/templates/C++/kapp4/: README  kapp4.kdevtemplate
kapptemplate/templates/C++/kapp4-qml/: CMakeLists.txt  README  kapp4-qml.kdevtemplate
kapptemplate/templates/C++/kapp4-qml/src/: %{APPNAMELC}.cpp  %{APPNAMELC}.desktop  %{APPNAMELC}.h  %{APPNAMELC}view.cpp  %{APPNAMELC}view.h  %{APPNAMELC}view_base.ui  CMakeLists.txt  main.cpp
kapptemplate/templates/C++/kapp4/doc/: README.DOC
kapptemplate/templates/C++/kde-simple/: kde-simple.kdevtemplate
kapptemplate/templates/C++/kofficetext/: kofficetext.kdevtemplate  kotext%{APPNAMELC}.desktop
kapptemplate/templates/C++/konqplugin/: README  konqplugin.kdevtemplate
kapptemplate/templates/C++/kpartapp/: README  kpartapp.kdevtemplate
kapptemplate/templates/C++/ktexteditor/: %{APPNAMELC}plugin.cpp  %{APPNAMELC}plugin.h  %{APPNAMELC}ui.rc  %{APPNAMELC}view.h  CMakeLists.txt  ktexteditor.kdevtemplate  ktexteditor_%{APPNAMELC}.desktop
kapptemplate/templates/C++/plasmoid/: %{APPNAMELC}.cpp  %{APPNAMELC}.h  CMakeLists.txt  Messages.sh  plasma-applet-%{APPNAMELC}.desktop  plasmoid.kdevtemplate
kapptemplate/templates/C++/qmake_qt4guiapp/: %{PROJECTDIRNAME}.kdev4  qmake_qt4guiapp.kdevtemplate
kapptemplate/templates/C++/runner/: %{APPNAMELC}.cpp  %{APPNAMELC}.desktop  %{APPNAMELC}.h  CMakeLists.txt  README  runner.kdevtemplate
kapptemplate/templates/Python/: CMakeLists.txt
kapptemplate/templates/Python/pykde4app/: %{APPNAME}.py  %{APPNAME}ui.rc  README  pykde4app.kdevtemplate
kapptemplate/templates/Python/pyqt4app/: %{APPNAME}.py  README  pyqt4app.kdevtemplate
kapptemplate/templates/ruby/: CMakeLists.txt
kapptemplate/templates/ruby/kderubyapp/: CMakeLists.txt  README  kderubyapp.kdevtemplate
kapptemplate/templates/ruby/rubykonqplugin/: CMakeLists.txt  README  rubykonqplugin.kdevtemplate
kapptemplate/tests/: CMakeLists.txt  macrosubstitutiontest.cpp  macrosubstitutiontest.h  namevalidatortest.cpp  namevalidatortest.h
kdeaccounts-plugin/: CMakeLists.txt  Messages.sh  README  kdeaccountsformat.cpp  kdeaccountsformat.h  kdeaccountsplugin.desktop
kioslave/: CMakeLists.txt
kioslave/perldoc/: CHANGES  CMakeLists.txt  Messages.sh  README  perldoc.cpp  perldoc.h  perldoc.protocol  pod2html.pl
kioslave/svn/: CMakeLists.txt  COPYING  Messages.sh  README  TODO  svn+file.protocol  svn+http.protocol  svn+https.protocol  svn+ssh.protocol  svn.cpp  svn.h  svn.protocol
kioslave/svn/ksvnd/: CMakeLists.txt  commitdlg.ui  ksvnd.cpp  ksvnd.desktop  ksvnd.h  org.kde.ksvnd.xml
kioslave/svn/svnhelper/: CMakeLists.txt  apply_patch.desktop  kio_svn_helper.cpp  kio_svn_helper.h  subversion.desktop  subversion_toplevel.desktop  subversioncheckout.ui  subversiondiff.ui  subversionlog.ui  subversionswitch.ui
kmtrace/: CMakeLists.txt  README  demangle.cpp  kde.excludes  kminspector.cmake  kmtrace.cpp  ksotrace.cpp  ktrace.c  ktrace.h  match.cpp  mtrace.c
kpartloader/: CMakeLists.txt  Messages.sh  kpartloader.cpp  kpartloaderui.rc
kspy/: CMakeLists.txt  Messages.sh  README  classinfoview.cpp  classinfoview.h  kspy.h  navview.cpp  navview.h  navviewitem.cpp  navviewitem.h  propsview.cpp  propsview.h  sigslotview.cpp  sigslotview.h  spy.cpp  spy.h
kspy/tests/: CMakeLists.txt  main.cpp
kstartperf/: CMakeLists.txt  Messages.sh  README  kstartperf.cpp  libkstartperf.c
kuiviewer/: CMakeLists.txt  Messages.sh  designerthumbnail.desktop  kuiviewer.cpp  kuiviewer.desktop  kuiviewer.h  kuiviewer_part.cpp  kuiviewer_part.desktop  kuiviewer_part.h  kuiviewer_part.rc  kuiviewerui.rc  main.cpp  quicreator.cpp  quicreator.h
kunittest/: CMakeLists.txt  dcopinterface.h  guimodrunner.cpp  kunittest  kunittest_debughelper  kunittestmod  runnergui.cpp  runnergui.h  testerwidget.ui  testerwidget.ui.h
kunittest/example/: CMakeLists.txt
kunittest/example/module/: CMakeLists.txt  sampleextra.cpp  sampleextra.h  samplemodule.cpp  samplemodule.h  samplemodule2.cpp  sampletests.cpp  sampletests.h
kunittest/example/simple/: CMakeLists.txt  main.cpp  maingui.cpp  sampletest.cpp  sampletest.h
poxml/: CMakeLists.txt  gettext.g  lauri.po  lauri.xml  parser.cpp  parser.h  po2xml.cpp  split.cpp  swappo.cpp  xml2pot.cpp
scheck/: CMakeLists.txt  README  scheck.cpp  scheck.h  scheck.themerc  status.txt
strigi-analyzer/diff/: CMakeLists.txt  Messages.sh  difflineanalyzer.cpp  difflineanalyzer.h
strigi-analyzer/po/: CMakeLists.txt  polineanalyzer.cpp
strigi-analyzer/ts/: CMakeLists.txt  tsthroughanalyzer.cpp
strigi-analyzer/xlf/: CMakeLists.txt  xlfstreamsaxanalyzer.cpp
(+76 files in other folders)
