if( UNIX )
  if(BUILD_cervisia)
    add_subdirectory(cervisia)
  endif()
endif( UNIX )
if(BUILD_kapptemplate)
  add_subdirectory(kapptemplate)
endif()
if(BUILD_kcachegrind)
  add_subdirectory(kcachegrind)
endif()
if(BUILD_kmtrace)
  add_subdirectory(kmtrace)
endif()
if(BUILD_kompare)
  add_subdirectory(kompare)
endif()
if(BUILD_lokalize)
  add_subdirectory(lokalize)
endif()
if(BUILD_okteta)
  add_subdirectory(okteta)
endif()
if(BUILD_poxml)
  add_subdirectory(poxml)
endif()
if(BUILD_scripts)
  add_subdirectory(scripts)
endif()

if(LIBXSLT_FOUND AND LIBXML2_FOUND)
  if(BUILD_umbrello)
     add_subdirectory(umbrello)
  endif()
endif(LIBXSLT_FOUND AND LIBXML2_FOUND)
